--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "main.js": {
       "files": [
-        "scripts/main.js"
+        "scripts/main.js",
+        "scripts/navigation.js"
       ],
       "main": true
     },
